<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>pacioli</groupId>
	<artifactId>pacioli</artifactId>
	<version>0.5.0-SNAPSHOT</version>
	<name>pacioli</name>
	<description>Pacioli compiler</description>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>jars</id>
			<name>Local jars</name>
			<url>file://${project.basedir}/jars</url>
		</repository>
    </repositories>

	<dependencies>
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>1.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<!-- http://www2.cs.tum.edu/projects/cup/ -->
		<dependency>
			<groupId>java_cup</groupId>
			<artifactId>runtime</artifactId>
			<version>11b</version>
		    <!-- <scope>system</scope>
			<systemPath>${project.basedir}/java-cup-11b-runtime.jar</systemPath> -->
		</dependency>
		<dependency>
			<groupId>pacioli</groupId>
			<artifactId>mvm</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>pacioli</groupId>
			<artifactId>uom</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>pacioli.Pacioli</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
				
			<plugin>
				<groupId>de.jflex</groupId>
				<artifactId>jflex-maven-plugin</artifactId>
				<version>1.9.1</version>
				<executions>
				<execution> 
					<goals>
					<goal>generate</goal>
					</goals>
					<configuration>
						<outputDirectory>src/main/java</outputDirectory>
						<lexDefinitions>
							<lexDefinition>src/main/java/pacioli/parser/lexer.flex</lexDefinition>
						</lexDefinitions>
					</configuration>
				</execution>
				</executions>
			</plugin>
			
			<!-- Switched to com.github.vbmacher below because that one supports the -location flag -->

			<!-- <plugin>
				<groupId>de.jflex</groupId>
				<artifactId>cup-maven-plugin</artifactId>
				<version>1.3</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<generatedSourcesDirectory>src/main/java</generatedSourcesDirectory>
							<cupSourceDirectory>${project.basedir}/src/main/java/pacioli/parser</cupSourceDirectory>
							<symbolInterface>true</symbolInterface>
							<parserName>Parser</parserName>
							<force>true</force>
						</configuration>
					</execution>
				</executions>
			</plugin>
			 -->
			<plugin>
				<groupId>com.github.vbmacher</groupId>
				<artifactId>cup-maven-plugin</artifactId>
				<version>11b-20160615-2</version>
				<executions>
					<execution>
					<goals>
						<goal>generate</goal>
					</goals>
					</execution>
				</executions>
				<configuration>
					<cupDefinition>src/main/java/pacioli/parser/grammar.cup</cupDefinition>
					<className>Parser</className>
					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
					<locations>true</locations>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
